<resources>
    <string name="app_name">rss</string>
    <string name="draw_open">Open</string>
    <string name="draw_close">Close</string>
    <string name="add_new_channel">Добавить источник</string>
    <string name="main_text_logo">Rss Reader</string>
    <string name="android_studio_android_com">android.studio@android.com</string>
    <string name="edit_channel">Edit channel</string>
    <string name="url_channel_source">Введите path источника Rss</string>
    <string name="btn_channel_save">Создать</string>
    <string name="btn_channel_cancel">Вернуться</string>
    <string name="ck_download_full_text">Загрузать полный текст статьи</string>
    <string name="ck_only_wifi">Загружать статьи только по WiFi</string>
    <string name="ck_cache_image">Кеширование изображения</string>
    <string name="exception_message_no_connection">Ошибка соединения с сервером</string>
    <string name="exception_message_generic">Неизвестная ошибка</string>
    <string name="exception_parse_xml">Ошибка разбора XML</string>
    <string name="exception_channel_not_found">Канал не найден</string>
    <string name="exception_channel_exists">Такой канал уже существует</string>
    <string name="exception_database_connect">Ошибка соединения с бд</string>
    <string name="menu_settings">Настройки</string>
    <string name="menu_close_app">Закрыть приложение</string>

    <string name="alert_edit_cat_save">Сохранить</string>
    <string name="alert_edit_cat_cancel">Отменить</string>
    <string name="alert_edit_cat_new_title">Укажите новое название</string>
    <string name="alert_edit_cat_title">Изменение</string>
    <string name="alert_delete_cat_yes">Да</string>
    <string name="alert_delete_cat_no">Нет</string>
    <string name="alert_delete_cat_title">Удаление</string>
    <string name="alert_delete_cat_message">Действительно удалить категорию?</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Settings fragment</string>
    <string name="navigation_header">Navigation header</string>
    <string name="star_image">Star image</string>
    <string name="logo_channel">Logo channel</string>
    <string name="all_items">Все</string>
    <string name="exception_detail_item">Не найдена новость</string>
    <string name="not_items_in_list">Нет новостей</string>
    <string name="title_activity_settings1">Settings1</string>

    <!-- Preference Titles -->
    <string name="sync_header">Синхронизация</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="sync_time_title">Интервал синхронизации</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="show_log">Просмотр лога</string>
    <string name="save_header">Хранение данных</string>
    <string name="save_count_title">Хранить элементов в канале</string>
    <string name="btnFavoriteList">Избранное</string>
    <string name="btnSettings">Настройки</string>
    <string name="btnCategory">Категории</string>
    <string name="menu_add_category">Добавить категорию</string>
    <string name="not_category">Без категории</string>
</resources>
