<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/sync_header">

        <ListPreference
            app:defaultValue="86400"
            app:entries="@array/sync_time_entries"
            app:entryValues="@array/sync_time_values"
            app:key="sync_time"
            app:title="@string/sync_time_title"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/save_header">
        <EditTextPreference
            app:defaultValue="500"
            app:key="save_count_item_per_channel"
            app:title="@string/save_count_title"/>
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/sync_header">

        <SwitchPreferenceCompat
            app:key="sync"
            app:title="@string/sync_title" />

        <SwitchPreferenceCompat
            app:dependency="sync"
            app:key="attachment"
            app:summaryOff="@string/attachment_summary_off"
            app:summaryOn="@string/attachment_summary_on"
            app:title="@string/attachment_title" />

    </PreferenceCategory>

</PreferenceScreen>
